# nlsh

./: .env.example  .gitignore  README.md  debug_streaming.py  demo_improved_features.py  demo_streaming.py  frozen-reqs.txt  pyproject.toml  test_basic.py  test_cli_fix.py  test_full_history.py  test_improved_streaming.py
src/nlsh/: cli.py  context.py  history.py  langgraph_llm.py  streaming.py  tools.py
test/: test_fix.py  test_provider_selection.py  test_tool_streaming.py
